# SocialFetch

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_RULES.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  run_api.py  run_bot.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml
data/: ratelimit.db-shm  ratelimit.db-wal
docs/: development.md
docs/decisions/: 0001-downloader-registry.md  0002-url-platform-detection.md  0003-unified-media-model.md  0004-configuration-system.md  0005-async-download-engine.md  0006-error-handling-strategy.md  0007-instagram-downloader.md  0008-configuration-system.md  0009-url-parser-service.md  0010-storage-layer.md  0011-download-orchestrator.md  0012-telegram-bot.md  0013-instagram-photo-fallback.md  0014-youtube-downloader.md
planning/: README.md  sprint-00.md  sprint-01.md
scripts/: bootstrap.ps1  bootstrap.sh  lint.ps1  lint.sh  test.ps1  test.sh
socialfetch/: __main__.py
socialfetch/config/: settings.py
socialfetch/core/: __init__.py  errors.py  exceptions.py  interfaces.py  models.py  types.py
socialfetch/downloaders/: __init__.py  base.py  instagram.py  instagram_api.py  instagram_photo.py  registry.py  spotify.py  youtube.py
socialfetch/services/: api.py  downloader.py  url_parser.py
socialfetch/shared/: __init__.py  filesystem.py  urls.py
socialfetch/storage/: interfaces.py  local.py
socialfetch/telegram/: __init__.py  bot.py  handlers.py  ratelimit.py
tests/: conftest.py  test_downloader.py  test_instagram.py  test_instagram_photo.py  test_registry.py  test_settings.py  test_smoke.py  test_spotify.py  test_storage.py  test_telegram.py  test_url_parser.py  test_urls.py  test_youtube.py
