[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "socialfetch"
version = "0.0.1"
description = "Open-source self-hosted Social Media Downloader Framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SocialFetch Contributors" },
]
keywords = [
    "social-media",
    "downloader",
    "self-hosted",
    "instagram",
    "tiktok",
    "youtube",
    "twitter",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ErtebateWeb/SocialFetch"
Repository = "https://github.com/ErtebateWeb/SocialFetch"
Issues = "https://github.com/ErtebateWeb/SocialFetch/issues"
Changelog = "https://github.com/ErtebateWeb/SocialFetch/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3",
    "black>=24.2",
    "pre-commit>=3.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
