[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "socialfetch"
version = "0.0.1"
description = "Open-source self-hosted Social Media Downloader Framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SocialFetch Contributors" },
]
dependencies = [
    "yt-dlp>=2025.05.22",
    "pydantic-settings>=2.0",
    "python-telegram-bot>=21.0",
]
keywords = [
    "social-media",
    "downloader",
    "self-hosted",
    "instagram",
    "tiktok",
    "youtube",
    "twitter",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3",
    "black>=24.2",
    "pre-commit>=3.6",
    "pytest-asyncio>=0.21",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.urls]
Homepage = "https://github.com/ErtebateWeb/SocialFetch"
Repository = "https://github.com/ErtebateWeb/SocialFetch"
Issues = "https://github.com/ErtebateWeb/SocialFetch/issues"
Changelog = "https://github.com/ErtebateWeb/SocialFetch/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["socialfetch"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["socialfetch"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yt_dlp", "socialfetch.downloaders.instagram", "socialfetch.config.settings", "telegram", "telegram.ext", "socialfetch.telegram", "socialfetch.telegram.handlers", "socialfetch.telegram.bot"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["socialfetch"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
